--- a/webapp1/Pages/Shared/_Layout.cshtml
+++ b/webapp1/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/contacto">Contacto</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/venta">Venta</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/prueba">Prueba</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/prueba2">Prueba 2</a>
+                        </li>
                     </ul>
                 </div>
             </div>
